[project]
name = "teaine-grail"
version = "0.1.0"
description = "The deploy program of Project Teaine."
authors = [
    {name = '津轻年回', email = 'Nranphy@outlook.com'}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]
